# IA_BigData

./: CIFAR-10_models_training.ipynb
ETL_Project/: .gitignore  Dockerfile.airflow  Dockerfile.hadoop  Dockerfile.nifi  README.md  docker-compose.yaml  pyproject.toml  spark_stream.bat
ETL_Project/airflow/dags/: dag_ecommerce.py
ETL_Project/api/: api_market.py
ETL_Project/shared_workspace/: FlujoDeteccionFraude.json  blacklist_ips.csv  dashboard.py  fraude_streaming.py  historico_ecommerce.py  init.cql  nodos_calientes.csv  redes_detectadas.csv  resumen_batch.csv  top_scrapers_batch.csv  yarn-site.xml
RAG_Project/: .env  README.md  pyproject.toml
RAG_Project/app/: main.py
RAG_Project/app/core/: agent.py  rag_chain.py
RAG_Project/app/services/: ingest_service.py  project_service.py
RAG_Project/data/projects/df5efa1a-7a8c-4205-9cea-12cbe194764f/: history.json  metadata.json
RAG_Project/data/projects/df5efa1a-7a8c-4205-9cea-12cbe194764f/chroma_db/: chroma.sqlite3
RAG_Project/data/projects/df5efa1a-7a8c-4205-9cea-12cbe194764f/docs/: Ciberseguridad.txt  Politica gastos de viaje.txt  Politica teletrabajo.txt  Politica vacaciones.txt
RAG_Project/frontend/: app_ui.py
